fix/VA-1368 Flashcards Tooltip overflow issue for long unbroken word (#269)
* fix eslint autofix errors for h5p-tooltip.js file

* fix the tooltip overflow issue for long unspaced word

--- a/styles/h5p-tooltip.css
+++ b/styles/h5p-tooltip.css
@@ -10,6 +10,7 @@
 
   padding: 0.25rem 0.5rem;
   white-space: normal;
+  word-break: break-all;
   width: max-content;
   max-width: min(300px, 90%);
 
